improve(api): Deposit returns a list of TransactionResult that is created per item